--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         </section>
         <section id="contact" class="section">
             <h2>Contact Us</h2>
-            <form class="contact-form">
+            <form class="contact-form" method="post" action="#">
                 <div class="form-group">
                     <label for="name">Name:</label>
                     <input type="text" id="name" name="name" required>
