--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <iframe 
                         width="560" 
                         height="315" 
-                        src="https://www.youtube.com/embed/dQw4w9WgXcQ" 
+                        src="Demon Slayer_ Kimetsu no Yaiba Infinity Castle _ OFFICIAL TRAILER.mp4"
                         title="Anime Trailer" 
                         frameborder="0" 
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
@@ -125,7 +125,7 @@
                 <div class="audio-section">
                     <h3>Featured Theme Songs</h3>
                     <audio controls>
-                        <source src="https://soundcloud.com/best-of-anime-soundtracks/hunter-x-hunter-the-old-man-is-crucified?utm_source=clipboard&utm_medium=text&utm_campaign=social_sharing" type="audio/mpeg">
+                        <source src="Light%20of%20the%20Seven%20%20Game%20of%20Thrones%20(Music%20from%20the%20HBO®%20Series%20-%20Season%206).mp3" type="audio/mpeg">
                         Your browser does not support the audio element.
                     </audio>
                 </div>
